--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,13 +7,10 @@
 <body>
   <div class="main-content">
         {{>header}}
-        <p>This website is created by Pawan Kumar.<br> It uses data from OpenWeatherMap.org </p>
+        <p>This website is created by VIJAY KUMAR .<br> It uses data from OpenWeatherMap.org </p>
         <br>
-        <img class="portrait" src="/pictures/PHOTO.jpg" alt="image">
-        <br>
-        <br>
-        <a href="https://github.com/pawanfaujdar"> GitHub</a>
-        <a href="https://www.linkedin.com/in/pawan-kumar-40a567201/"> LinkedIn</a>
+        <a href="	https://github.com/loser-joker17"> GitHub</a>
+        <a href="	https://www.linkedin.com/in/vijay-kumar-425825190"> LinkedIn</a>
     </div>
       {{>footer}}
 </body> 
